5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1582_2897.log
== SUBMITION (2019-03-23 15:27:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('n='))

# Impressao do dobro do numero
print(2*n)
-- EXECUTION TIME:
0.183526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(2*n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:27:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('n='))

# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.218076
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
